[package]

name = "bip39"
version = "0.5.1"
authors = [ "Stephen Oliver <steve@infincia.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/infincia/bip39-rs/"
repository = "https://github.com/infincia/bip39-rs/"
readme = "README.md"
description = "A Rust implementation of BIP-0039"
documentation = "https://docs.rs/bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]

[lib]
name = "bip39"
path = "src/lib.rs"

[dependencies]
error-chain = "0.12.0"
rustc-hash = "1.0.1"
ring = "^0.13"
rand = "0.5.5"
lazy_static = "^1.1.0"
