[package]

name = "bip39"
version = "0.6.0-beta.1"
authors = [ "Stephen Oliver <steve@infincia.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/infincia/bip39-rs/"
repository = "https://github.com/infincia/bip39-rs/"
readme = "README.md"
description = "A Rust implementation of BIP-0039"
documentation = "https://docs.rs/bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []
mesalock_sgx = ["sgx_tstd", "sgx_trts"]


default = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish", "mesalock_sgx"]

[dependencies]
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_trts =  { rev = "v1.1.0", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
sgx_types = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

#failure = "0.1.3"
failure = { git = "https://github.com/mesalock-linux/failure-sgx.git" }
#sha2 = "0.8.0"
#sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git" }
#hmac = "0.7.0"
#hmac = { git = "https://github.com/mesalock-linux/rustcrypto-MACs-sgx.git" }
#pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rust_crypto = { git = "https://github.com/mesalock-linux/rust-crypto-sgx.git", package="rust-crypto" }
#rand = "0.6.1"
rand =  { git = "https://github.com/mesalock-linux/rand-sgx.git" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
